# Espresso

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/espresso/app/articles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: native-lib.c
app/src/main/java/com/espresso/app/articles/: Article.kt  ArticleAdapter.kt  ArticlesListActivity.kt  EditArticleActivity.kt  MainActivity.kt  ReadArticlesActivity.kt  RegisterActivity.kt  UserArticlesActivity.kt  UserProfileActivity.kt  WriteArticleActivity.kt
app/src/main/java/com/espresso/app/articles/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: baseline_free_breakfast.xml  baseline_house.xml  baseline_house_24.xml  ic_icon_back_foreground.xml  ic_icon_foreground.xml  rounded_button.xml  rounded_edittext.xml
app/src/main/res/layout/: activity_articles_list.xml  activity_edit_article.xml  activity_main.xml  activity_read_article.xml  activity_register.xml  activity_user_articles.xml  activity_user_profile.xml  activity_write_article.xml  list_item.xml
app/src/main/res/mipmap-anydpi-v26/: ic_icon_bach_round.xml  ic_launcher.xml
app/src/main/res/values/: colors.xml  ic_icon_bach_background.xml  ic_icon_background.xml  themes.xml
app/src/test/java/com/espresso/app/articles/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
